# CPMUtil

./: .gitignore  CPM.cmake  CPMUtil.cmake  README.md  cpmfile.json
.ci/: chmod.sh  format.sh  license-header.sh  shellcheck.sh
.forgejo/workflows/: checks.yml  continuous.yml  license-header.yml
.github/workflows/: continuous.yml
docs/: CPMUtil.md
docs/CPMUtil/: AddDependentPackage.md  AddJsonPackage.md  AddPackage.md  AddQt.md
scripts/: ScriptUtils.cmake  dir.cmake  fetch.cmake  format.cmake  hash.cmake  ls.cmake  reset.cmake  rm.cmake  update-cpmutil.cmake  url.cmake  utils.cmake  version.cmake  which.cmake
tests/: CMakeLists.txt  CPM.cmake  CPMUtil.cmake  DetectArchitecture.cmake  DetectPlatform.cmake  cpmfile.json
tests/.patch/discord-rpc/: 0004-Add-example-patch-comment.patch  0005-Add-another-example-patch-comment-longer-descript.patch  0006-Add-another-example-patch-comment-longer-descript.patch
tests/dir/: CMakeLists.txt  main.c
tests/ffmpeg/: CMakeLists.txt  main.cpp
tests/patch/: CMakeLists.txt
tests/qt/: CMakeLists.txt  Info.plist  main.cpp
tools/: cpmutil.sh  update-cpm.sh
tools/cpm/: README.md  common.sh  format.sh  migrate.sh  package.sh  update.sh
tools/cpm/cmake/: ScriptUtils.cmake  ls.cmake  update.cmake
tools/cpm/cmake/package/: dir.cmake  fetch.cmake  get-updater-info.cmake  hash.cmake  reset.cmake  version.cmake
tools/cpm/package/: add.sh  download.sh  fetch.sh  hash.sh  patch.sh  rm.sh  update.sh  vars.sh  version.sh  which.sh
tools/cpm/package/util/: fetch.sh  fix-hash.sh  interactive.sh  replace.sh  url-hash.sh  url.sh
tools/cpm/package/vars/: key.sh  url.sh
